[package]
name = "lz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
sevenz-rust = { version = "0.4.3", features = ["compress", "aes256"] }
eyre = "0.6.8"
secstr = "0.5.1"
tempfile = "3.6.0"
