[package]
name = "lz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
sevenz-rust = { version = "0.4.3", features = ["compress", "aes256"] }
eyre = "0.6.8"
secstr = "0.5.1"
tempfile = "3.6.0"
aes = "0.8.3"
pbkdf2 = "0.12.1"
hmac = "0.12.1"
sha2 = "0.10.7"
xz2 = "0.1.7"
rand = "0.8.5"
cipher = "0.4.4"
generic-array = "0.14.7"
