[package]
name = "stow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
eyre = "0.6.8"
secstr = "0.5.1"
tempfile = "3.6.0"
rpassword = "7.2.0"
rayon = "1.7.0"
log = "0.4.19"
time = "0.3.22"
log4rs = "1.2.0"
which = "4.4.0"
num_cpus = "1.16.0"
